--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -7,4 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     map:cameraZoom="18"
-    tools:context=".MapaActivity" />
+    tools:context=".MapaActivity"
+    android:theme="@android:style/Theme.NoTitleBar"
+    />
