--- a/app/src/main/res/layout/item_lugar.xml
+++ b/app/src/main/res/layout/item_lugar.xml
@@ -9,9 +9,9 @@
     <TextView
         android:id="@+id/txtNombre"
         android:layout_width="0dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:textColor="#FFEB3B"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,8 +19,8 @@
     <TextView
         android:id="@+id/txtDescripcion"
         android:layout_width="0dp"
-        android:layout_height="33dp"
-        android:textSize="14sp"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/txtNombre"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtNombre"
@@ -28,8 +28,8 @@
 
     <RatingBar
         android:id="@+id/ratingBarLugares"
-        android:layout_width="237dp"
-        android:layout_height="42dp"
+        android:layout_width="238dp"
+        android:layout_height="48dp"
         android:numStars="5"
         app:layout_constraintEnd_toEndOf="@+id/txtDescripcion"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,15 +38,32 @@
 
     <ImageButton
         android:id="@+id/imgMapa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="#3F51B5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
-        app:layout_constraintStart_toEndOf="@+id/ratingBarLugares"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/ratingBarLugares"
         app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
         app:srcCompat="@android:drawable/ic_menu_search" />
+
+    <ImageButton
+        android:id="@+id/imgBorrar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="#3F51B5"
+        app:layout_constraintEnd_toStartOf="@+id/imgMapa"
+        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <ImageButton
+        android:id="@+id/imgModificar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="#3F51B5"
+        app:layout_constraintEnd_toStartOf="@+id/imgBorrar"
+        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 
 </android.support.constraint.ConstraintLayout>
 
